# Bank-PDF-2-csv-html-onenote

./: .gitignore  README.md  pyproject.toml
bs2o/: __init__.py  charts.py  cli.py  config.py  exporter.py  md_parser.py  mineru_runner.py  models.py  onenote_sync.py  pipeline.py
